--- a/VMDEditor/ParameterEditWindow.xaml
+++ b/VMDEditor/ParameterEditWindow.xaml
@@ -18,6 +18,6 @@
                 <MenuItem Header="タイムライン" IsCheckable="True" IsChecked="{Binding IsTimeLineWindowVisible.Value}"/>
             </MenuItem>
         </Menu>
-        <TextBlock HorizontalAlignment="Left" Margin="60,49,0,0" Grid.Row="1" Text="{Binding SelectedArticle.Value.Value.Name}" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="60,49,0,0" Grid.Row="1" Text="{Binding SelectedArticle.Value.Value.Name, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="172"/>
     </Grid>
 </Window>
